<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:id="@+id/obImg1"
        android:src="@drawable/user_circle"
        android:contentDescription="@string/obUsrnameImgDscp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/obUsrname"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/obUsrPlacehold"
        android:ems="12"
        android:id="@+id/username" />

</LinearLayout>